# assignments-q3

./: README.md  requirements.txt
05_secure_data_encryption/: README.md  key.json  main.py  pyproject.toml
car-rental-system/: main.py  pyproject.toml
contact-book/: app.py
data-sweeper-streamlit/: app.py
function-visualizer/: main.py  pyproject.toml
inventory-managemnet-system/: README.md
library-manager-supabase/: README.md  library.db  main.py  pyproject.toml
neon-sign-shop/: main.py  pyproject.toml
password-strength-meter/: main.py  pyproject.toml
personal-budget-analyzer/: main.py  pyproject.toml
personal-library-manager/: README.md  library_data.json  main.py  pyproject.toml
project-4-assignments/: readme.md
project-4-assignments/Assignments 1 to 6/pro-1-madlibs/: main.py  pyproject.toml
project-4-assignments/Assignments 1 to 6/pro-2guess-the-num-computer/: main.py  pyproject.toml
project-4-assignments/Assignments 1 to 6/pro-3-guess-the-number-game-user/: main.py  pyproject.toml
project-4-assignments/Assignments 1 to 6/pro-4-rock-paper-scissors/: pyproject.toml
project-4-assignments/Assignments 1 to 6/pro-5-hangman/: main.py  pyproject.toml
project-6-assignments/: README.md  main.py  pyproject.toml  tempCodeRunnerFile.py
pytest-demonstration/: .coverage  README.md  pyproject.toml
pytest-demonstration/src/: inventory.py
pytest-demonstration/tests/: test_inventory.py
shape_calculator/: main.py  pyproject.toml
to-do-list-application/: app.py
unit-coverter/: app.py
(+107 files in other folders)
